@@ -1,6 +1,7 @@
 CHANGES IN FLTK 1.1.6
 
 	- Documentation updates (STR #552, STR #608)
+	- Fl_Double_Window produced an error on resize with X11
 	- FLUID didn't display menu items using images properly
 	  (STR #564)
 	- Fl_Sys_Menu_Bar didn't compile on case-sensitive
